# pi5ws2812b

./: CMakeLists.txt  LICENSE  README.md
include/lg/: Makefile
pi5ws2812b/: pi5ws2812b.c  rp1Spi.c  rp1Spi.h  rp1SpiRegs.h  run
spi/: rp1Regs.h  rp1Spi.c  rp1Spi.h  rp1SpiUtil.c  rp1SpiUtil.h  rpi5Rp1Spi.c  run
src/: main  main.c  main.h
